2017-06-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wd2d.cpp:  Do not abort drawing if an error is encountered.
	Add a few more error checks.

	* src/win/wd2d.cpp src/win/wgnuplib.h:  Add code for using a 
	DeviceContext as RenderTarget.  Requires Direct2D 1.1 which is
	available starting from Windows 7 with Platform Update.  Requires
	to link to the Direct3D 11.1 library d3d11.lib.  Not yet enabled
	by default.

	* src/win/wgraph.c src/win/wgnuplib.h src/win/wd2d.cpp|h wcommon.h:
	src/win/wgnuplib.h:  Allocate a separate subwindow for the graph
	instead of handling the drawing within the parent window.  This makes
	the HwndRenderTarget (mostly) functional.

	* src/win/wd2d.cpp:  Change the type of some parameters from bool to
	BOOL to avoid warnings.

2017-06-21  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.h:  The dot needs not to be included in the number
	of different point types for cycling through.  Bug introduced on
	2017-05-13.

2017-06-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/standard.h src/standard.c src/eval.c docs/gnuplot.doc:
	Use Bessel functions j0, j1, jn, y0, y1, yn from libm if present.
	These replace the hard-coded implementations besj0, besj1, besy0, besy1
	in standard.c.   The old versions are still present if needed.
	Add wrappers besjn(i, X) besyn(i, X).
	The hard-coded implementations claimed accuracy to 1.e-13.
	The libm implementations claim accuracy to 2.e-16.

2017-06-20  Ethan A Merritt  <merritt@u.washington.edu>

	Bump version number of development branch to 5.3

2017-06-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/fit.c (save_fit) src/util.h src/util.c (num_to_str):
	save_fit() is the only external caller of num_to_str().
	Call value_to_str() instead and make num_to_str() local to util.c.

	* src/internal.c (f_index):  Repair memory leak when a datablock
	is accessed as $DATABLOCK[index].

2017-06-18  Bastian Maerkisch  <bmaerkisch@web.de>
